[package]
name = "turing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
graph = "0.3.1"
rio_api = "0.8.4"
rio_turtle = "0.8.4"
sophia = "0.8.0"
sophia_api = "0.8.0"
sophia_inmem = "0.8.0"
sophia_iri = "0.8.0"
sophia_turtle = "0.8.0"
